[package]
name = "rsh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
ctrlc = "3.1.9"
dirs = "3.0.2"
itertools = "0.10.1"
once_cell = "1.8.0"
os_pipe = "0.9.2"
rustyline = "8.2.0"
shared_child = "0.3.5"
which = "4.1.0"
whoami = "1.1.2"
