[package]
name = "rsh-line-editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
crossterm = "0.22.1"
itertools = "0.10.3"
thiserror = "1.0.30"
unicode-width = "0.1.9"
rsh-line-parser = { path = "../rsh-line-parser" }
scopefunc = "0.1.1"
