[package]
name = "rsh-line-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
paste = "1.0.7"
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.2.1"

[features]
