[package]
name = "rsh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
ctrlc = "3.1.9"
dirs = "3.0.2"
itertools = "0.10.1"
once_cell = "1.8.0"
os_pipe = "0.9.2"
shared_child = "0.3.5"
which = "4.1.0"
whoami = "1.1.2"
rsh-line-editor = { path = "../rsh-line-editor" }
rsh-line-parser = { path = "../rsh-line-parser" }
crossterm = "0.22.1"
crossterm_winapi = "0.9.0"
crossbeam = "0.8.1"
same-file = "1.0.6"
